fix: (IndexBar) z-index

--- a/src/components/index-bar/index-bar.less
+++ b/src/components/index-bar/index-bar.less
@@ -36,7 +36,7 @@
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    z-index: 3;
+    z-index: 910;
     overflow: visible;
     color: var(--adm-color-weak);
     font-size: 12px;
@@ -92,6 +92,7 @@
   &-sticky {
     .@{class-prefix-index-bar}-anchor-title {
       position: sticky;
+      z-index: 900;
       top: var(--sticky-offset-top);
       left: 0;
     }
